<resources>
    <string name="app_name">POSRocketTask</string>
    <string name="txt_error">Something went wrong.Please try again.</string>
    <string name="general_info">General Info</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="add">Add</string>
    <string name="addresses">Addresses</string>
    <string name="tags">Tags</string>
    <string name="comments">Comments</string>


</resources>
