<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".View.Activities.AddCustomerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_close" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_general_info"
                android:drawablePadding="5dp"
                android:padding="15dp"
                android:text="@string/general_info"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="aaaaaa"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_textbox"
                android:drawablePadding="5dp"
                android:hint="@string/first_name"
                android:inputType="text"

                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_textbox"
                android:drawablePadding="5dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gender"
                android:drawablePadding="5dp"
                android:padding="15dp"
                android:text="@string/gender"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="15dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_gender_male"
                    android:text="@string/male"
                    android:textSize="15sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_gender_female"
                    android:text="@string/female"
                    android:textSize="15sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none"
                    android:textSize="15sp" />


            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="5dp"
                    android:text="@string/phone_numbers"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@color/blue"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtAddresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_addresses"
                    android:drawablePadding="5dp"
                    android:text="@string/addresses"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@color/blue"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_tags"
                    android:drawablePadding="5dp"
                    android:text="@string/tags"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@color/blue"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_comment"
                android:drawablePadding="5dp"
                android:padding="15dp"
                android:text="@string/comments"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>